<resources>
    <string name="app_name">Chat App</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="account">Account</string>

    <string name="default_string">Default String</string>
    <string name="default_time">Mon 12:00</string>
    <string name="default_uid">uid: 233</string>

    <string name="error_password">Error Password</string>

    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>
    <string name="submit">Submit</string>

    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="logout">Log Out</string>
    <string name="send_message">Send Messages</string>
    <string name="add">Add</string>

    <string name="back">Back</string>
    <string name="more">More</string>

    <string name="helper_name">Phone number, email or name</string>

    <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>

    <string name="avatar">avatar</string>
    <string name="name">Chilfish</string>
    <string name="email">chill4fish@gmail.com</string>
    <string name="phone">+84 123 456 789</string>
    <string name="address">Hanoi, Vietnam</string>
    <string name="bio">Hi there~</string>

    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="description">Description</string>
    <string name="price">Price</string>

    <string name="hint_mess_input">Type a message</string>
    <string name="hint_email">email</string>
    <string name="hint_bio">Bio</string>
    <string name="hint_password">password</string>
    <string name="hint_name">name</string>
    <string name="hint_phone">phone</string>
    <string name="hint_address">address</string>
    <string name="hint_title">title</string>
    <string name="hint_subtitle">subtitle</string>
    <string name="hint_description">description</string>


    <!--  btn navigation bar  -->
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
</resources>