<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_bg"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp">

            <androidx.cardview.widget.CardView
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="12dp">

                <ImageView
                    android:id="@+id/profile_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/avatar"
                    android:scaleType="centerCrop"
                    android:src="@drawable/avatar" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/name"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/profile_uid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_uid"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/account"
                    android:textColor="@color/secondary" />

                <TextView
                    android:id="@+id/profile_email"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/email"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/hint_email"
                    android:textColor="@color/dark_text" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/profile_bio"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/bio"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/hint_bio"
                    android:textColor="@color/dark_text" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/profile_logout"
            style="@style/Btn.Elevated"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/logout"
            android:textColor="@color/white"
            app:backgroundTint="@color/error" />

        <Button
            android:id="@+id/profile_send_message"
            style="@style/Btn.Outlined"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/send_message" />
    </LinearLayout>
</layout>