<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="?attr/selectableItemBackground"
    android:orientation="horizontal"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="12dp"
        app:cardCornerRadius="8dp">

        <ImageView
            android:id="@+id/chat_avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/avatar"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/chat_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:text="@string/default_string"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/chat_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/default_string"
            android:textColor="?android:textColorSecondary"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/chat_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_time"
        android:textColor="?android:textColorSecondary"
        android:textSize="12sp" />
</LinearLayout>
