<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_chat_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@null"
            android:contentDescription="@string/default_string"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#ffffff" />

        <androidx.cardview.widget.CardView
            android:id="@+id/chat_avatar_card"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="12dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_chat_back"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/chat_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/avatar"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/chat_bar_name"
            style="@style/Text.Base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/username"
            android:textColor="#ffffff"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/chat_avatar_card"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@null"
            android:contentDescription="@string/default_string"
            android:src="@drawable/baseline_menu_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#ffffff" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
